vcs/specs/meta-system/fail/type_errors/undefined_function.vr
// @test: meta-fail
// @level: L0
// @tier: 0
// @tags: meta, undefined, function, error
// @description: Test undefined function detection
// @expected-error: E100

meta fn test_undefined_fn() -> Int {
    nonexistent_function()  // Function doesn't exist
}

fn main() {
    @const assert_eq(test_undefined_fn(), 0);
}
